# shex

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPECIFICATION.md
crates/shex-ast/: Cargo.toml
crates/shex-ast/src/: lib.rs
crates/shex-cli/: Cargo.toml
crates/shex-cli/src/: main.rs
crates/shex-interpreter/: Cargo.toml
crates/shex-interpreter/src/: lib.rs
crates/shex-lexer/: Cargo.toml
crates/shex-lexer/src/: lib.rs
crates/shex-parser/: Cargo.toml
crates/shex-parser/src/: lib.rs  shex.lalrpop  string_utils.rs  variable_resolver.rs
tests/: e2e.rs  integration.rs
tests/e2e/: cli_workflows.rs  mod.rs  script_execution.rs
tests/integration/: execution.rs  mod.rs  parsing.rs
